remove /claims <player> and add /claims edit <player> clean-up permission nodes update context-aware command completions